@@ -15,6 +15,7 @@ jobs:
     if: ${{ !github.event.pull_request.draft }}
 
     runs-on: ubuntu-latest
+    timeout-minutes: 10
 
     steps:
       - name: Get changed files
